in progress of specializing ad/non-ad

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,8 @@ add_executable(coursework main.cu
         grad/cuda/device_prop.h
         grad/engine/tape.h
         grad/engine/tape_context.h
-        grad/cuda/shared_array.h)
+        grad/cuda/shared_array.h
+        grad/cuda/unique_array.h)
 
 set_target_properties(coursework PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
