start implementing grad accumulation & propagation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,49 +4,50 @@ project(coursework CUDA)
 set(CMAKE_CUDA_STANDARD 17)
 
 add_executable(coursework main.cu
-        grad/core/shape.h
-        grad/core/array.h
-        grad/cuda/shared_storage.h
-        grad/engine/expr.h
-        grad/functor/unary.h
-        grad/unary.h
-        grad/functor/binary.h
-        grad/binary.h
-        grad/functor/extension.h
-        grad/cuda/kernel/assign.h
-        grad/cuda/assign.h
-        grad/engine/unary_lazy.h
-        grad/engine/binary_lazy.h
-        grad/engine/access.h
-        grad/engine/term.h
-        grad/functor/sequence.h
-        grad/sequence.h
-        grad/functor/random.h
-        grad/random.h
-        grad/cuda/random.h
-        grad/grad.h
-        grad/linalg.h
-        grad/cuda/cublas.h
-        grad/cuda/cusolver.h
-        grad/creation.h
-        grad/core/eval.h
-        grad/cuda/host_buffer.h
-        grad/engine/unary_eager.h
-        grad/functor/linalg.h
-        grad/cuda/reduce.h
-        grad/reduce.h
-        grad/util/util.h
-        grad/functor/reduce.h
-        grad/engine/binary_eager.h
-        grad/extension.h
-        grad/functor/activation.h
-        grad/activation.h
-        grad/core/defaults.h
-        grad/cuda/device_prop.h
-        grad/engine/tape.h
-        grad/engine/tape_context.h
-        grad/cuda/shared_array.h
-        grad/cuda/unique_array.h)
+        radar/core/shape.h
+        radar/core/array.h
+        radar/cuda/shared_storage.h
+        radar/engine/expr.h
+        radar/functor/unary.h
+        radar/core/unary.h
+        radar/functor/binary.h
+        radar/core/binary.h
+        radar/functor/extension.h
+        radar/cuda/kernel/assign.h
+        radar/cuda/assign.h
+        radar/engine/unary_lazy.h
+        radar/engine/binary_lazy.h
+        radar/engine/access.h
+        radar/engine/term.h
+        radar/functor/sequence.h
+        radar/core/sequence.h
+        radar/functor/random.h
+        radar/core/random.h
+        radar/cuda/random.h
+        radar/radar.h
+        radar/core/linalg.h
+        radar/cuda/cublas.h
+        radar/cuda/cusolver.h
+        radar/core/creation.h
+        radar/core/eval.h
+        radar/cuda/host_buffer.h
+        radar/engine/unary_eager.h
+        radar/functor/linalg.h
+        radar/cuda/reduce.h
+        radar/core/reduce.h
+        radar/core/util.h
+        radar/functor/reduce.h
+        radar/engine/binary_eager.h
+        radar/core/extension.h
+        radar/functor/activation.h
+        radar/core/activation.h
+        radar/core/default.h
+        radar/cuda/prop_context.h
+        radar/engine/tape.h
+        radar/engine/tape_context.h
+        radar/cuda/shared_array.h
+        radar/cuda/unique_array.h
+        radar/cuda/launch.h)
 
 set_target_properties(coursework PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
