--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,50 +4,50 @@ project(coursework CUDA)
 set(CMAKE_CUDA_STANDARD 17)
 
 add_executable(coursework main.cu
-        radar/core/shape.h
-        radar/core/array.h
-        radar/cuda/shared_storage.h
-        radar/engine/expr.h
-        radar/functor/unary.h
-        radar/core/unary.h
-        radar/functor/binary.h
-        radar/core/binary.h
-        radar/functor/extension.h
-        radar/cuda/kernel/assign.h
-        radar/cuda/assign.h
-        radar/engine/unary_lazy.h
-        radar/engine/binary_lazy.h
-        radar/engine/access.h
-        radar/engine/term.h
-        radar/functor/sequence.h
-        radar/core/sequence.h
-        radar/functor/random.h
-        radar/core/random.h
-        radar/cuda/random.h
-        radar/radar.h
-        radar/core/linalg.h
-        radar/cuda/cublas.h
-        radar/cuda/cusolver.h
-        radar/core/creation.h
-        radar/core/eval.h
-        radar/cuda/host_buffer.h
-        radar/engine/unary_eager.h
-        radar/functor/linalg.h
-        radar/cuda/reduce.h
-        radar/core/reduce.h
-        radar/core/util.h
-        radar/functor/reduce.h
-        radar/engine/binary_eager.h
-        radar/core/extension.h
-        radar/functor/activation.h
-        radar/core/activation.h
-        radar/core/default.h
-        radar/cuda/prop_context.h
-        radar/engine/tape.h
-        radar/engine/tape_context.h
-        radar/cuda/shared_array.h
-        radar/cuda/unique_array.h
-        radar/cuda/launch.h)
+        radann/core/shape.h
+        radann/core/array.h
+        radann/cuda/shared_storage.h
+        radann/engine/expr.h
+        radann/functor/unary.h
+        radann/core/unary.h
+        radann/functor/binary.h
+        radann/core/binary.h
+        radann/functor/extension.h
+        radann/cuda/kernel/assign.h
+        radann/cuda/assign.h
+        radann/engine/unary_lazy.h
+        radann/engine/binary_lazy.h
+        radann/engine/access.h
+        radann/engine/term.h
+        radann/functor/sequence.h
+        radann/core/sequence.h
+        radann/functor/random.h
+        radann/core/random.h
+        radann/cuda/random.h
+        radann/radann.h
+        radann/core/linalg.h
+        radann/cuda/cublas.h
+        radann/cuda/cusolver.h
+        radann/core/creation.h
+        radann/core/eval.h
+        radann/cuda/host_buffer.h
+        radann/engine/unary_eager.h
+        radann/functor/linalg.h
+        radann/cuda/reduce.h
+        radann/core/reduce.h
+        radann/core/util.h
+        radann/functor/reduce.h
+        radann/engine/binary_eager.h
+        radann/core/extension.h
+        radann/functor/activation.h
+        radann/core/activation.h
+        radann/core/default.h
+        radann/cuda/prop_context.h
+        radann/engine/tape.h
+        radann/engine/tape_context.h
+        radann/cuda/shared_array.h
+        radann/cuda/unique_array.h
+        radann/cuda/launch.h)
 
 set_target_properties(coursework PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
