pre-refactor savepoint

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,20 +7,20 @@ add_executable(coursework main.cu
         radann/core/shape.h
         radann/core/array.h
         radann/cuda/shared_storage.h
-        radann/engine/expr.h
-        radann/functor/unary.h
+        radann/expr/base.h
+        radann/func/unary.h
         radann/core/unary.h
-        radann/functor/binary.h
+        radann/func/binary.h
         radann/core/binary.h
         radann/cuda/kernel/assign.h
         radann/cuda/assign.h
-        radann/engine/unary_lazy.h
-        radann/engine/binary_lazy.h
-        radann/engine/access.h
-        radann/engine/term.h
-        radann/functor/sequence.h
+        radann/expr/unary.h
+        radann/expr/binary.h
+        radann/expr/access.h
+        radann/expr/term.h
+        radann/func/sequence.h
         radann/core/sequence.h
-        radann/functor/random.h
+        radann/func/random.h
         radann/core/random.h
         radann/cuda/random.h
         radann/radann.h
@@ -30,20 +30,20 @@ add_executable(coursework main.cu
         radann/core/creation.h
         radann/core/eval.h
         radann/cuda/host_buffer.h
-        radann/engine/unary_eager.h
-        radann/functor/linalg.h
+        radann/func/linalg.h
         radann/cuda/reduce.h
         radann/core/reduce.h
         radann/core/util.h
-        radann/functor/reduce.h
-        radann/engine/binary_eager.h
+        radann/func/reduce.h
         radann/core/default.h
         radann/cuda/prop.h
-        radann/engine/tape.h
-        radann/engine/tape_context.h
+        radann/expr/tape.h
+        radann/expr/tape_context.h
         radann/cuda/shared_array.h
         radann/cuda/unique_array.h
-        radann/cuda/launch.h radann/core/tape.h)
+        radann/cuda/launch.h
+        radann/core/tape.h
+        radann/expr/eager.h)
 
 set_target_properties(coursework PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
