add propagate, start reorganizing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,33 +8,33 @@ add_executable(coursework main.cu
         radann/core/array.h
         radann/cuda/shared_storage.h
         radann/expr/base.h
+        radann/oper/unary.h
         radann/func/unary.h
-        radann/core/unary.h
+        radann/oper/binary.h
         radann/func/binary.h
-        radann/core/binary.h
         radann/cuda/kernel/assign.h
         radann/cuda/assign.h
         radann/expr/unary.h
         radann/expr/binary.h
         radann/expr/access.h
         radann/expr/term.h
+        radann/oper/sequence.h
         radann/func/sequence.h
-        radann/core/sequence.h
+        radann/oper/random.h
         radann/func/random.h
-        radann/core/random.h
         radann/cuda/random.h
         radann/radann.h
-        radann/core/linalg.h
+        radann/func/linalg.h
         radann/cuda/cublas.h
         radann/cuda/cusolver.h
-        radann/core/creation.h
+        radann/api/creation.h
         radann/core/eval.h
         radann/cuda/host_buffer.h
-        radann/func/linalg.h
+        radann/core/linalg.h
         radann/cuda/reduce.h
-        radann/core/reduce.h
-        radann/core/util.h
         radann/func/reduce.h
+        radann/meta/meta.h
+        radann/core/reduce.h
         radann/core/default.h
         radann/cuda/prop.h
         radann/diff/tape.h
@@ -42,8 +42,8 @@ add_executable(coursework main.cu
         radann/cuda/shared_array.h
         radann/cuda/unique_array.h
         radann/cuda/launch.h
-        radann/core/tape.h
-        radann/expr/eager.h radann/diff/grad_unary.h radann/diff/grad_binary.h)
+        radann/api/tape.h
+        radann/core/eager.h radann/diff/grad_unary.h radann/diff/grad_binary.h radann/diff/propagate.h radann/diff/is_ad.h radann/diff/aspect.h)
 
 set_target_properties(coursework PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
